--- a/index.html
+++ b/index.html
@@ -3,21 +3,192 @@
 <head>
     <title>Action Recognition System</title>
     <style>
-        body { font-family: sans-serif; text-align: center; background: #f4f4f4; }
-        .container { background: white; width: 400px; margin: 50px auto; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        #preview { width: 100%; margin: 10px 0; display: none; border-radius: 5px; }
-        .result-box { margin-top: 20px; padding: 10px; background: #e7f3ff; border-radius: 5px; display: none; }
-        button { background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 5px; }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #e0e7ff 0%, #f4f4f4 100%);
+            min-height: 100vh;
+            margin: 0;
+        }
+        .hero {
+            width: 100vw;
+            min-height: 340px;
+            background: linear-gradient(120deg, #4f8cff 0%, #6dd5fa 60%, #a8edea 100%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 64px 16px 48px 16px;
+            box-shadow: 0 8px 32px rgba(79,140,255,0.13);
+            border-radius: 0 0 36px 36px;
+            position: relative;
+        }
+        .hero h1 {
+            color: #fff;
+            font-size: 2.8em;
+            font-weight: 800;
+            margin: 0 0 18px 0;
+            letter-spacing: 1.5px;
+            text-shadow: 0 4px 24px rgba(0,0,0,0.13);
+        }
+        .hero p {
+            color: #f4faff;
+            font-size: 1.25em;
+            max-width: 600px;
+            margin: 0 0 28px 0;
+            opacity: 0.97;
+        }
+        .hero .cta-btn {
+            background: #fff;
+            color: #3578e5;
+            font-weight: 700;
+            font-size: 1.13em;
+            border: none;
+            border-radius: 8px;
+            padding: 14px 36px;
+            box-shadow: 0 2px 12px rgba(79,140,255,0.13);
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+        }
+        .hero .cta-btn:hover {
+            background: #3578e5;
+            color: #fff;
+            box-shadow: 0 4px 24px rgba(79,140,255,0.18);
+        }
+        .container {
+            background: #fff;
+            width: 420px;
+            margin: 0 auto 56px auto;
+            padding: 36px 32px 30px 32px;
+            border-radius: 22px;
+            box-shadow: 0 12px 36px rgba(79,140,255,0.13), 0 2px 8px rgba(0,0,0,0.07);
+            position: relative;
+            top: -36px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 18px;
+        }
+        .upload-icon {
+            font-size: 3.2em;
+            color: #4f8cff;
+            margin-bottom: 8px;
+        }
+        .step-label {
+            font-size: 1.08em;
+            color: #3578e5;
+            font-weight: 600;
+            margin-bottom: 8px;
+        }
+        .file-input-label {
+            display: inline-block;
+            background: linear-gradient(90deg, #e7f3ff 0%, #f0fff0 100%);
+            color: #3578e5;
+            border-radius: 8px;
+            padding: 12px 24px;
+            font-size: 1.08em;
+            font-weight: 500;
+            cursor: pointer;
+            margin-bottom: 10px;
+            box-shadow: 0 2px 8px rgba(79,140,255,0.07);
+            transition: background 0.2s, color 0.2s;
+        }
+        .file-input-label:hover {
+            background: #e0e7ff;
+            color: #3578e5;
+        }
+        #imageInput {
+            display: none;
+        }
+        #preview {
+            width: 100%;
+            margin: 10px 0 0 0;
+            display: none;
+            border-radius: 10px;
+            box-shadow: 0 2px 12px rgba(79,140,255,0.10);
+        }
+        .analyze-btn {
+            background: linear-gradient(90deg, #4f8cff 0%, #6dd5fa 100%);
+            color: white;
+            border: none;
+            padding: 14px 32px;
+            cursor: pointer;
+            border-radius: 8px;
+            font-size: 1.13em;
+            font-weight: 600;
+            margin-top: 10px;
+            transition: background 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 12px rgba(79,140,255,0.10);
+        }
+        .analyze-btn:hover {
+            background: linear-gradient(90deg, #3578e5 0%, #4fc3f7 100%);
+            box-shadow: 0 4px 16px rgba(79,140,255,0.13);
+        }
+        .result-box {
+            margin-top: 18px;
+            padding: 18px 14px;
+            background: linear-gradient(90deg, #e7f3ff 0%, #f0fff0 100%);
+            border-radius: 10px;
+            display: none;
+            box-shadow: 0 2px 8px rgba(79,140,255,0.07);
+            width: 100%;
+        }
+        .result-box strong {
+            color: #3578e5;
+        }
+        #preview {
+            width: 100%;
+            margin: 14px 0 10px 0;
+            display: none;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(79,140,255,0.08);
+        }
+        .result-box {
+            margin-top: 22px;
+            padding: 16px 12px;
+            background: linear-gradient(90deg, #e7f3ff 0%, #f0fff0 100%);
+            border-radius: 8px;
+            display: none;
+            box-shadow: 0 2px 8px rgba(79,140,255,0.07);
+        }
+        button {
+            background: linear-gradient(90deg, #4f8cff 0%, #6dd5fa 100%);
+            color: white;
+            border: none;
+            padding: 12px 28px;
+            cursor: pointer;
+            border-radius: 6px;
+            font-size: 1.08em;
+            font-weight: 500;
+            margin-top: 10px;
+            transition: background 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 8px rgba(79,140,255,0.10);
+        }
+        button:hover {
+            background: linear-gradient(90deg, #3578e5 0%, #4fc3f7 100%);
+            box-shadow: 0 4px 16px rgba(79,140,255,0.13);
+        }
+        input[type="file"] {
+            margin-top: 10px;
+            margin-bottom: 8px;
+            font-size: 1em;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Action & Image Annotator</h2>
+    <div class="hero">
+        <h1>Action Analysis & Image Captioning</h1>
+        <p>Upload an image to automatically recognize the main action and generate a descriptive caption. This tool uses AI to analyze your image and provide both an action label and a natural language annotation.</p>
+        <button class="cta-btn" onclick="document.getElementById('container-anchor').scrollIntoView({behavior: 'smooth'})">Get Started</button>
+    </div>
+    <div id="container-anchor" class="container">
+        <div class="upload-icon">📷</div>
+        <div class="step-label">Step 1: Choose an image</div>
+        <label class="file-input-label" for="imageInput">Select Image</label>
         <input type="file" id="imageInput" accept="image/*" onchange="previewImage()">
         <img id="preview">
-        <br>
-        <button onclick="uploadImage()">Analyze Action</button>
-
+        <div class="step-label" style="margin-top:18px;">Step 2: Analyze your image</div>
+        <button class="analyze-btn" onclick="uploadImage()">Analyze Image</button>
         <div id="resultBox" class="result-box">
             <p><strong>Recognized Action:</strong> <span id="action"></span></p>
             <p><strong>Annotation:</strong> <span id="annotation"></span></p>
@@ -31,8 +202,10 @@
         function previewImage() {
             const file = document.getElementById('imageInput').files[0];
             const preview = document.getElementById('preview');
-            preview.src = URL.createObjectURL(file);
-            preview.style.display = 'block';
+            if (file) {
+                preview.src = URL.createObjectURL(file);
+                preview.style.display = 'block';
+            }
         }
 
         async function uploadImage() {
@@ -42,14 +215,26 @@
             const formData = new FormData();
             formData.append('image', fileInput.files[0]);
 
-            document.getElementById('annotation').innerText = "Analyzing...";
+            // Show the box and a loading message
             document.getElementById('resultBox').style.display = 'block';
+            document.getElementById('action').innerText = "Processing...";
+            document.getElementById('annotation').innerText = "Generating caption...";
 
-            const response = await fetch(API_URL, { method: 'POST', body: formData });
-            const data = await response.json();
+            try {
+                const response = await fetch(API_URL, { method: 'POST', body: formData });
+                const data = await response.json();
 
-            document.getElementById('action').innerText = data.action;
-            document.getElementById('annotation').innerText = data.annotation;
+                if (data.status === "success") {
+                    // FIXED: Using 'action' and 'annotation' to match your HTML <span> tags
+                    document.getElementById('action').innerText = data.action;
+                    document.getElementById('annotation').innerText = data.annotation;
+                } else {
+                    alert("Error from API: " + data.message);
+                }
+            } catch (error) {
+                console.error("Fetch Error:", error);
+                alert("Could not connect to the server. Check if Ngrok is still running!");
+            }
         }
     </script>
 </body>
